--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "functions": {
-    "api/**/*.py": { "runtime": "python3.12", "maxDuration": 10, "memory": 512 }
-  },
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
-  ]
+  "version": 2
 }
